  - capture - make creating fields from config/parsers/wise/tagger use ES bulk call
  - capture/viewer - new outer fields replace gre fields (PR #1889)
  - cont3xt - new Cont3xt application, see https://arkime.com/cont3xt
  - cont3xt/viewer - share new user UI
  - db.pl - fix sync-files/add-missing trying to add non pcap files
  - db.pl - init/wipe clean up aliases that became indices
  - common - fix userAuthIps setting
  - parliament - added --insecure option
  - parliament/wise - can be configured to use shared user DB
  - viewer - fixed auth fallback to digest from header mode
  - viewer - field-actions to display configurable menu items on field labels
  - viewer - share shortcuts with specific users or roles ("arkimeUser" role = old shortcut sharing)
  - viewer - share views with specific users or roles ("arkimeUser" role = old shortcut sharing)
  - viewer - share notifiers with specific users or roles (all previous notifiers will be shared with the "arkimeUser" role)
  - viewer - share queries with specific users or roles
  - viewer - share hunts with roles
  - viewer - rework some settings UI, try and make UX similiar when adding things
  - viewer - no more _moloch_shared user
  - viewer - configure auto-hiding map/graph on large queries using turnOffGraphDays (default = 30 days)
  - wise - fix some stats sorting
  - wise - fix UI saving of INI formatted config

3.4.2 2022/03/31
  - release - node 16.14.2
  - viewer - Packets/s, Sessions/s, Dropped/s didn't have correct total/average
  - viewer - host = $shortcut should work now
  - capture - support longer node names (thanks mcgillowen)
  - capture - host.smb.tokens wasn't defined correctly
  - wise - alienvault no longer uses key
  - tagger - support --insecure option
  - tests - support --insecure with tests

3.4.1 2022/03/16
  - release - node 16.14.1
  - capture - new snmp parser of a few fields
  - capture - rules can have numeric ranges
  - db.pl - stop using history type name